--- a/partials/login.html
+++ b/partials/login.html
@@ -1,10 +1,10 @@
  <nav class = "navBar" ng-controller = "LoginCtrl">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo right">Movies</a>
+      <a href="#" class="brand-logo right">Login/Logout</a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a ng-href="#">Home</a></li>
-        <li><a ng-href="#">Movies</a></li>
-        <li><a ng-href="#">Search</a></li>
+        <li><a ng-href="#">Find New Movies</a></li>
+        <li><a ng-href="#">Search Your Movies</a></li>
+        <!-- <li><a ng-href="#">Login/Logout</a></li> -->
       </ul>
     </div>
   </nav>
