--- a/partials/movie-search.html
+++ b/partials/movie-search.html
@@ -21,14 +21,16 @@
 			<img src="{{movie.Poster}}">
 			<div>
 			<button ng-show="hideFire" ng-click="addToFirebase(movie)">Add to WatchList</button>
-			<select ng-hide="hideFire" value="{{movie.Stars}}">
-				<option value=0>STARS!</option>
-				<option value=5>5 Stars</option>
-				<option value=4>4 Stars</option>
-				<option value=3>3 Stars</option>
-				<option value=2>2 Stars</option>
-				<option value=1>1 Stars</option>
-			</select>
+			<div class="input-field">
+				<select>
+					<option value=0>STARS!</option>
+					<option value=5>5 Stars</option>
+					<option value=4>4 Stars</option>
+					<option value=3>3 Stars</option>
+					<option value=2>2 Stars</option>
+					<option value=1>1 Stars</option>
+				</select>
+			</div>
 			<button ng-hide="hideFire" ng-click="deleteFromFire(movie.id)">Delete</button>
 			</div>
 	</div>
